--- a/.github/workflows/auto_sign.yaml
+++ b/.github/workflows/auto_sign.yaml
@@ -23,6 +23,8 @@ jobs:
           # 对于多个账号一定会有人机验证问题，且因为是密码，有一定的安全风险
           # PHONE: ${{ secrets.PHONE }}
           # PASSWORD: ${{ secrets.PASSWORD }}
-          TOKEN: ${{ secrets.TOKEN }}
+          TOKEN: ${{ secrets.TOKEN1 }}
+                 ${{ secrets.TOKEN2 }}
+                 ${{ secrets.TOKEN3 }}
         run: |
           python skyland.py
